2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* asf.cpp: Fix a seeking issue: when we seek to close to the
	beginning of a file, and if, for any of the streams in the file,
	there is not a frame in any of the packets between the first packet
	in the file and the packet we start searching, we'd return an
	error condition. Detect this situation, and if when seeking we
	reached the beginning of the file, assume we found a frame in
	the first packet.

2009-06-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* asf-structures.cpp: An invalid stream number isn't enough
	reason to end up emitting a MediaFailed event.

2009-06-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* asf.cpp: Update according to mms API changes

2009-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* asf.cpp: Move to use LOG_ASF instead of ASF_LOG.

2009-05-03  Jeffrey Stedfast  <fejj@novell.com>

	* asf.h: ASFContext is a struct, not a class. Fixed forward
	declaration.

	* asf-structures.h (asf_object): Added () to make it clearer what
	this was intended to return.

2009-05-02  Jeffrey Stedfast  <fejj@novell.com>

	* asf.h: Use glib int types instead of stdint.h types.

	* asf-structures.cpp: Use guint16 instead of uint16_t

	* asf-debug.h: don't include stdint.h, use proper glib types.

	* asf.cpp: Guard config.h and don't include stdint.h - don't need
	it. Also use limits.h values.

2009-03-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* asf.cpp: ASFFrameReader::Reset: delete any payloads we may
	  have.

2009-03-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* asf.cpp: ASFReader: don't advance next_packet_index if we
	  couldn't read the current packet.

2009-02-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* asf.cpp: More glib-2.10 fixes.

2009-02-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* asf.cpp: Update according to new pipeline api.

2009-02-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* asf.h:
	* asf.cpp: Remove MediaErrorEventArgs.
