@@ -1,3 +1,12 @@
+2009-09-15  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* asf.cs: Update so it generates the 'asf-generated.cpp' in SVN.
+	Cast sizeof to integers so we can reduce the number of gcc 
+	warnings.
+	* asf-generated.cpp: Regenerated
+
+	r: andreia
+
 2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* asf.cpp: Fix a seeking issue: when we seek to close to the
